# uniclaw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  build-release.sh  deploy.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: config.toml  default_config.toml
data/: SOUL.md  robot.toml
data/skills/: file-assistant.md  memory-assistant.md  system-monitor.md
docs/specs/: 2026-03-31-hardening-design.md  2026-03-31-hardening-plan.md  2026-04-04-hardening-streaming-design.md  2026-04-04-hardening-streaming-plan.md  2026-04-04-providers-design.md  2026-04-04-providers-plan.md  2026-04-13-robot-brain-design.md  2026-04-13-robot-brain-plan.md
firmware/arduino/uniclaw_mcu/: uniclaw_mcu.ino
src/: config.rs  lib.rs  main.rs
src/agent/: context.rs  loop.rs  memory.rs  mod.rs  skills.rs
src/channels/: telegram.rs
src/commands/: chat.rs  mod.rs  serve.rs
src/llm/: aliases.rs  anthropic.rs  gemini.rs  mod.rs  openai.rs  reliable.rs  router.rs  types.rs
src/mcp/: client.rs  mod.rs  protocol.rs  transport.rs
src/robot/: description.rs  mod.rs  runtime.rs  world_state.rs
src/robot/bridge/: mock.rs  mod.rs  serial.rs
src/server/: api_stream.rs  cron.rs  heartbeat.rs  http.rs  mod.rs  mqtt.rs
src/tools/: cron_tools.rs  edit_file.rs  file_ops.rs  get_time.rs  http_fetch.rs  memory_ops.rs  mod.rs  registry.rs  robot_actions.rs  shell.rs  system.rs
tests/: agent_test.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/components/: MetricCard.svelte  Sidebar.svelte  Toast.svelte  Toggle.svelte  ToolCall.svelte
web/src/lib/: api.ts  icons.ts  stream.ts  theme.ts
web/src/pages/: Chat.svelte  Config.svelte  Dashboard.svelte  Skills.svelte
