[package]
name = "uniclaw"
version = "0.2.0"
edition = "2021"
description = "Open-source AI brain for physical robots"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client (for LLM API)
reqwest = { version = "0.12", default-features = false, features = [
    "json", "multipart", "stream", "rustls-tls"
] }

# HTTP server
axum = "0.8"
tower-http = "0.6"

# MQTT
rumqttc = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Async utilities
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rust-embed = "8"
mime_guess = "2"

# Channels (optional)
teloxide = { version = "0.13", features = ["macros"], optional = true }
tokio-serial = { version = "5", optional = true }
tokio-tungstenite = { version = "0.24", optional = true, features = ["connect"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[features]
default = []
telegram = ["teloxide"]
camera = []
serial = ["dep:tokio-serial"]
ros2 = ["dep:tokio-tungstenite"]

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
opt-level = "z"
